<resources>
    <string name="app_name">新能源汽车</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="phone">请输入您的电话号码</string>
    <string name="password">请输入您的密码</string>
    <string name="use_third_account">第三方账号登录</string>
    <string name="create_infm_account">创建账号</string>
    <string name="forget_password">忘记密码</string>
    <string name="no_install_wechat">未安装微信</string>
    <string name="no_install_qq">未安装QQ</string>
    <string name="tip_loging">登录中...</string>
    <string name="tip_begin_oauth">开始授权...</string>
    <string name="tip_login_fail">登录失败</string>
    <string name="oauth_fail">授权失败</string>
    <string name="oauth_cancle">授权取消</string>
    <string name="tip_phone_regex_not_right">手机号码格式不正确</string>
    <string name="tip_email_regex_not_right">邮箱格式不正确</string>
    <string name="tip_account_empty">请输入您的用户名</string>
    <string name="tip_account_regex_not_right">用户名格式不正确</string>
    <string name="tip_password_can_not_be_empty">密码不能为空</string>
    <string name="xiaowu">IT_xiao小巫</string>
    <string name="user_rule">用户协议</string>
    <string name="create_account">创建账号</string>
    <string name="send_verification_code">获取验证码</string>
    <string name="count_down">%ss</string>
    <string name="tip_please_input_phone">请输入手机号码</string>
    <string name="tip_phone_can_not_be_empty">手机号码不能为空</string>
    <string name="tip_please_input_code">请输入邮箱</string>
    <string name="tip_please_input_name">请输入用户名</string>
    <string name="tip_please_input_6_32_password">请输入6-32个密码</string>
    <string name="reset_pwd">重置密码</string>
    <string name="person_info">个人信息</string>
    <string name="personal_welcome">欢迎使用APP</string>
    <string name="loading">loading</string>
    <string name="test">只是测试</string>


    <string name="setting">我的设置</string>
    <string name="setting_comment">我的评论</string>
    <string name="setting_like">我的点赞</string>
    <string name="setting_collect">我的收藏</string>
    <string name="setting_question">开始答题</string>
    <string name="setting_ask">咨询回复</string>
    <string name="button_ok">确定</string>
    <string name="search">搜索</string>

    <!-- 价格区间页面 -->
    <string name="price_intro">自定义价格</string>
    <string name="price_low">最低价格</string>
    <string name="price_high">最高价格</string>
    <string name="price_unit">万</string>
    <string name="filter_no">不限条件</string>
    <string name="filter_brand">品牌</string>
    <string name="filter_price">价格</string>
    <string name="filter_type">种类</string>
    <string name="filter_config">参数</string>

    <!-- 首页 -->
    <string name="index_recommend">推荐阅读</string>
    <string name="index_recommend_more">查看更多</string>

</resources>
