<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/actionbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/filter_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_brand"/>

        <TextView
            android:id="@+id/filter_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cropToPadding="false"
            android:paddingLeft="@dimen/dimen_size_30dp"
            android:paddingRight="@dimen/dimen_size_30dp"
            android:text="@string/filter_price"/>

        <TextView
            android:id="@+id/filter_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cropToPadding="false"
            android:paddingLeft="@dimen/dimen_size_30dp"
            android:paddingRight="@dimen/dimen_size_30dp"
            android:text="@string/filter_type" />

        <TextView
            android:id="@+id/filter_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_config" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_text"/>


    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rv_recycler_view"
        />

</LinearLayout>